Adding form validation

--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -1,20 +1,27 @@
-[type="submit"] {
-    font-family: "Montserrat", Arial, Helvetica, sans-serif;
-    width: 100%;
-    background: #cc6666;
-    border-radius: 5px;
-    border: 0;
-    cursor: pointer;
-    color: white;
-    font-size: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    transition: all 0.3s;
-    margin-top: -4px;
-    font-weight: 700;
-  }
-  
-  [type="submit"]:hover {
-    background: #cc4949;
-  }
-  
+.button {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  width: 100%;
+  background: #cc6666;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all 0.3s;
+  margin-top: -4px;
+  font-weight: 700;
+}
+
+.button:hover {
+  background: #cc4949;
+}
+
+.button.invalid {
+  background: #805a5a;
+}
+
+button.invalid:hover {
+  background: #805a5a;
+}
