--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,5 +1,6 @@
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 #00000033;
+  background-color: #131b2b;
   transition: 0.3s;
   width: 10%;
   margin: 50px;
